fixed spacing on about us page

--- a/css/components/common.css
+++ b/css/components/common.css
@@ -67,6 +67,8 @@
 .marginAbout {
   margin-top: 15px;
   margin-bottom: 30px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .marginBackButton {
